<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/dimGray"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:background="@color/colorPrimary"
        android:layout_height="120dp"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/original_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/originalTitle"
            tools:text="@string/original_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.138"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"></androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MovieDetailActivity">

            <ImageView
                android:id="@+id/thumbnailImage"
                style="@style/ImageViewThumbnail"
                android:contentDescription="@string/movie_thumbnail"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/top_guideline"
                app:layout_constraintVertical_bias="0.023"
                tools:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/releaseDate"
                android:textColor="@color/white"
                tools:text="@string/release_date"
                app:layout_constraintStart_toEndOf="@+id/thumbnailImage"
                app:layout_constraintTop_toTopOf="@+id/thumbnailImage" />

            <TextView
                android:id="@+id/vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/voteAverage"
                android:textColor="@color/white"
                tools:text="@string/vote_average"
                app:layout_constraintStart_toEndOf="@+id/thumbnailImage"
                app:layout_constraintTop_toBottomOf="@+id/release_date" />

            <TextView
                android:id="@+id/overview"
                style="@style/overview"
                app:layout_anchor="@+id/constraintLayout"
                app:layout_anchorGravity="center"
                app:layout_constraintBottom_toTopOf="@id/tv_trailers_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/thumbnailImage"
                tools:ignore="MissingConstraints"
                tools:text="@string/overview"
                android:textColor="@color/white"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/top_guideline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="133dp" />

            <ImageView
                android:id="@+id/favoriteToggle"
                android:layout_width="44dp"
                android:layout_height="35dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="56dp"
                android:background="#00ffffff"
                android:src="@drawable/unfavorite_star"
                app:layout_constraintStart_toEndOf="@+id/thumbnailImage"
                app:layout_constraintTop_toBottomOf="@+id/vote_average" />

            <TextView
                android:id="@+id/tv_trailers_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trailers_title"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/overview"
                app:layout_constraintBottom_toTopOf="@id/rv_trailers"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="38dp"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_trailers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/release_date"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="90dp"
                >

            </androidx.recyclerview.widget.RecyclerView>




        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>